--- a/frontend/miniapp_frontend/src/i18n/locales/zh.json
+++ b/frontend/miniapp_frontend/src/i18n/locales/zh.json
@@ -1,33 +1,212 @@
 {
   "app": {
+    "loading_app": "加载中",
     "title": "GraceHub 平台",
-    "masterBot": "Master Bot",
-    "footerBrand": "由 GraceHub 提供支持"
+    "masterBot": "主控机器人",
+    "footerBrand": "由 GraceHub 0.1.0a 提供支持",
+    "loading": "正在加载应用…",
+    "error_open_from_telegram": "请通过 Telegram 打开 mini app",
+    "error_owner_only": "此面板仅限机器人所有者使用。请使用管理员账户打开。",
+    "error_hint_open_from_bot": "请直接从 Telegram 中的机器人打开 mini app（@bot_name → 菜单按钮）",
+    "first_launch_prompt": "请输入来自 @BotFather 的机器人令牌：",
+    "first_launch_create_error_fallback": "创建机器人失败。请检查令牌和访问权限。",
+    "footer_text": "感谢您的支持",
+    "header_default_title": "GraceHub 控制面板",
+    "chat_connected": "客服聊天已连接",
+    "chat_not_connected": "客服聊天未连接至机器人",
+    "chat_not_connected_more": "详细信息",
+    "nav_dashboard": "主页",
+    "nav_tickets": "工单",
+    "nav_operators": "客服人员",
+    "nav_settings": "设置",
+    "tariff_private_mode": "私密模式",
+    "tariff_label": "套餐"
+  },
+  "bindHelp": {
+    "title": "客服聊天未绑定",
+    "paragraph1": "您需要通过 /start 命令启动连接的机器人，使自己成为管理员。",
+    "paragraph2": "然后创建一个启用话题的超级群聊，并将机器人添加为管理员。",
+    "paragraph3": "接着在 General 话题中输入命令 /bind @{{bot_username}} 来绑定机器人并开始接收用户消息。",
+    "ok": "明白"
   },
   "nav": {
-    "dashboard": "控制台",
+    "dashboard": "仪表盘",
     "tickets": "工单",
     "operators": "客服人员",
-    "settings": "设置"
+    "settings": "设置",
+    "billing": "套餐"
+  },
+  "billing": {
+    "title": "套餐与支付",
+    "loading": "正在加载套餐…",
+    "error_prefix": "加载套餐时出错",
+
+    "button_details": "详情",
+    "button_choose": "选择",
+    "button_cancel": "取消",
+    "button_processing": "处理中...",
+
+    "period_and_limit": "{{days}} 天 • 最多 {{limit}} 张工单",
+
+    "modal_title": "套餐 {{name}}",
+    "modal_description": "套餐 {{name}} 每月包含最多 {{ticketsLimit}} 张工单。",
+    "base_period": "基础周期：{{days}} 天 • 每月最多 {{limit}} 张工单。",
+    "choose_period_label": "选择支付周期",
+
+    "period_1x": "1 个月",
+    "period_3x": "3 个月",
+    "period_12x": "12 个月",
+
+    "final_period_label": "最终周期",
+    "final_price_label": "最终价格",
+
+    "payment_method_label": "支付方式",
+    "payment_method_placeholder": "请选择支付方式",
+    "payment_method_stars": "Telegram Stars",
+    "payment_method_ton": "TON",
+    "payment_method_yookassa": "ЮKassa（银行卡/SBP）",
+
+    "ton_hint": "点击“选择”，然后点击“打开钱包”进行支付。支付完成后返回此处并点击“检查支付”。",
+    "yk_hint_inline": "点击“选择”，在 ЮKassa 完成支付，然后返回此处点击“检查支付”。",
+
+    "ton_price_after_invoice": "创建账单后将显示金额",
+    "yk_price_after_invoice": "创建账单后将显示金额",
+
+    "ton_requisites_title": "TON 支付信息",
+    "close": "关闭",
+    "ton_addr_label": "地址",
+    "ton_amount_label": "金额",
+    "ton_comment_label": "备注",
+    "copy_address": "复制地址",
+    "copy_amount": "复制金额",
+    "copy_comment": "复制备注",
+    "copied": "已复制",
+    "copy_failed": "复制失败",
+
+    "important": "重要提示",
+    "ton_comment_required": "必须填写备注，否则付款将无法自动识别。",
+    "ton_manual_hint_short": "如果您的钱包未安装或未自动填写，请安装钱包并按上述信息手动付款。",
+
+    "open_wallet_btn": "打开钱包",
+    "open_payment_page": "打开支付页面",
+    "check_payment": "检查支付",
+    "checking": "检查中...",
+    "cancel_payment": "取消支付",
+    "cancelled": "已取消",
+
+    "yk_title": "ЮKassa 支付",
+    "yk_hint": "通过链接完成支付，然后返回此处点击“检查支付”。",
+    "yk_invoice_id": "账单 ID",
+
+    "payment_success_title": "支付成功",
+    "payment_success_body": "套餐 {{name}}（{{months}} 个月）已成功激活。",
+    "payment_success_ok": "确定",
+    "payment_failed": "无法验证付款。请重试。"
   },
   "firstLaunch": {
     "welcome": "欢迎使用 GraceHub 机器人管理平台！",
-    "actionsTitle": "你现在想做什么？",
+    "description": "此平台可让您创建自己的支持与反馈机器人，并连接到启用话题的 Telegram 超级群聊。您可以直接在 Telegram 中处理客户咨询！",
+    "actionsTitle": "您现在可以执行以下操作",
     "addBot": "添加新机器人",
-    "listBots": "你的机器人列表",
-    "removeBot": "删除机器人",
+    "listBots": "您的机器人",
+    "removeBot": "移除机器人",
     "status": "机器人状态",
     "howToStartTitle": "如何开始",
-    "step1": "通过 @BotFather 创建一个机器人。",
-    "step2": "点击「添加新机器人」并发送 token。",
-    "step3": "实例创建完成后，这里会显示控制面板和统计信息。"
+    "step1": "通过 @BotFather 创建机器人。",
+    "step2": "点击“添加新机器人”并发送令牌。",
+    "step3": "创建完成后，这里将显示控制面板和统计数据。",
+    "addBotHint": "通过 @BotFather 获取令牌并添加机器人。GraceHub 将自动连接它。",
+    "botTokenLabel": "来自 @BotFather 的机器人令牌",
+    "botTokenPlaceholder": "例如：1234567890:ABCDEF...",
+    "connectBot": "连接机器人"
   },
+
+  "dashboard": {
+    "ticketsTitle": "📊 工单统计",
+    "ticketsNew": "新建",
+    "ticketsInProgress": "处理中",
+    "ticketsAnswered": "已回复",
+    "ticketsClosed": "已关闭",
+    "usageTitle": "📈 使用情况",
+    "usageMessages": "消息数量",
+    "usageApiCalls": "API 调用",
+    "avgResponseLabel": "平均响应时间",
+    "uniqueUsersLabel": "独立用户",
+    "loading": "正在加载统计数据…",
+    "errorPrefix": "错误",
+    "noData": "暂无数据"
+  },
+
+  "tickets": {
+    "loading": "正在加载工单…",
+    "filter_status_label": "按状态筛选",
+    "search_label": "按用户搜索",
+    "search_placeholder": "用户名或 ID",
+    "error_prefix": "⚠️ 错误：",
+    "empty": "没有工单",
+    "total_prefix": "总计：",
+    "created_at_label": "创建时间：",
+    "user_fallback": "用户 {{id}}",
+    "filter_all": "所有状态",
+    "status_new": "⬜️ 新建",
+    "status_inprogress": "🟨 处理中",
+    "status_answered": "🟩 已回复",
+    "status_closed": "🟦 已关闭",
+    "status_spam": "⬛️ 垃圾"
+  },
+
+  "operators": {
+    "loading": "加载中...",
+    "add_title": "👥 添加客服人员",
+    "enter_telegram_id": "输入 Telegram ID",
+    "add_success": "✅ 已添加客服人员",
+    "remove_success": "✅ 已移除客服人员",
+    "error_prefix": "❌ 错误：",
+    "telegram_id_label": "Telegram ID",
+    "telegram_id_hint": "要查找 ID，请打开 Telegram 中的 @username_to_id_bot",
+    "role_label": "角色",
+    "role_operator": "客服（可管理工单）",
+    "role_viewer": "查看者（仅可阅读）",
+    "add_button": "添加客服人员",
+    "list_title": "当前客服人员 ({{count}})",
+    "empty": "暂无客服人员",
+    "remove_button": "删除",
+    "remove_confirm": "确定要删除客服 {{name}} 吗？"
+  },
+
   "settings": {
+    "languageLabel": "界面语言",
+    "loading": "加载中...",
     "title": "设置",
-    "greetingLabel": "用户欢迎消息",
-    "defaultAnswerLabel": "默认回复",
-    "autoCloseLabel": "工单自动关闭时间（小时）",
-    "privacyTitle": "隐私模式",
-    "languageLabel": "界面语言"
+    "save_sticky": "保存更改",
+    "save_success": "✅ 设置已保存",
+    "error_prefix": "❌ 错误：",
+    "greeting_title": "欢迎消息",
+    "greeting_label": "欢迎文本",
+    "greeting_placeholder": "您好！感谢您的咨询...",
+    "autoreply_title": "自动回复",
+    "autoreply_enabled_label": "自动回复已启用",
+    "autoreply_default_label": "默认回复",
+    "autoreply_default_placeholder": "我们已收到您的消息，将在 24 小时内回复您…",
+    "autoclose_title": "自动关闭",
+    "autoclose_label": "关闭时间（小时）",
+    "autoclose_hint": "在指定时间内无活动的工单将自动关闭。",
+    "privacy_title": "隐私模式",
+    "privacy_label": "隐私模式",
+    "privacy_hint": "限制机器人转发或复制消息（类似 Telegram 设置）。",
+    "language_title": "语言",
+    "language_label": "界面语言",
+    "language_hint": "此设置会影响控制面板语言，也可被机器人使用。",
+    "language_ru": "俄语",
+    "language_en": "英语",
+    "language_es": "西班牙语",
+    "language_hi": "印地语",
+    "language_zh": "中文（普通话）",
+    "toggle_on": "开启",
+    "toggle_off": "关闭"
+  },
+  "common": {
+    "cancel": "取消",
+    "saving": "正在保存..."
   }
 }
