чуть добавил лÐлогики в superadmin меню

--- a/frontend/miniapp_frontend/src/i18n/locales/ru.json
+++ b/frontend/miniapp_frontend/src/i18n/locales/ru.json
@@ -19,7 +19,7 @@
     "nav_tickets": "Тикеты",
     "nav_operators": "Операторы",
     "nav_settings": "Настройки",
-    "tariff_private_mode": "Личный режим",
+    "tariff_private_mode": "Личный",
     "tariff_label": "Тариф"
   },
   "bindHelp": {
