--- a/frontend/miniapp_frontend/src/i18n/locales/ru.json
+++ b/frontend/miniapp_frontend/src/i18n/locales/ru.json
@@ -204,7 +204,12 @@
     "language_hi": "Хинди",
     "language_zh": "Китайский (Мандарин)",
     "toggle_on": "Включен",
-    "toggle_off": "Выключен"
+    "toggle_off": "Выключен",
+    "restart_required_title": "Требуется перезапуск",
+    "restart_required_text": "Язык был изменён. Чтобы изменения применились везде, перезапустите приложение.",
+    "restart_now": "Перезапустить сейчас",
+    "restart_later": "Позже",
+    "restart_hint": "Если не перезапускать, часть интерфейса может остаться на старом языке."
   },
   "common": {
     "cancel": "Отмена",
