--- a/frontend/miniapp_frontend/src/i18n/locales/hi.json
+++ b/frontend/miniapp_frontend/src/i18n/locales/hi.json
@@ -213,5 +213,28 @@
   "common": {
     "cancel": "रद्द करें",
     "saving": "सहेजा जा रहा है..."
+  },
+  "superAdmin": {
+    "firstLaunch_offer_block_hint": "FirstLaunch पर उपयोगकर्ता द्वारा ऑफ़र स्वीकार करने तक एक ब्लॉकिंग विंडो सक्षम करता है।",
+    "single_tenant_allowlist_hint": "यह उन उपयोगकर्ताओं की allowlist है जिन्हें single-tenant मोड में पैनल तक पहुँच की अनुमति है।",
+    "antiflood_limit_hint": "प्रति मिनट संदेश सीमा (30 तक अनुशंसित)",
+    "attachments_limit_mb_hint": "अटैचमेंट सीमा (MB)",
+    "bots_limit_hint": "कनेक्ट किए जा सकने वाले बॉट्स की सीमा",
+    "single_tenant_payments_disabled_hint": "single-tenant मोड में भुगतान गेटवे अक्षम होते हैं। यह व्यक्तिगत उपयोग के लिए इंस्टॉलेशन माना जाता है।",
+    "saved_title": "सहेजा गया",
+    "saved_text": "सेटिंग्स सहेज दी गई हैं।",
+    "add_superadmin_title": "superadmin जोड़ें",
+    "telegram_user_id_placeholder_example": "उदाहरण: 123456789",
+    "confirm_delete_superadmin_title": "superadmin हटाएँ",
+    "confirm_delete_owner_title": "owner ID हटाएँ",
+    "confirm_title": "पुष्टि",
+
+    "confirm_delete_superadmin_text": "superadmin {{id}} हटाएँ?",
+    "confirm_delete_owner_text": "owner ID {{id}} हटाएँ?",
+    "confirm_delete_text": "हटाएँ?",
+    "delete": "हटाएँ",
+    "cancel": "रद्द करें",
+    "add_owner_title": "owner ID जोड़ें",
+    "owner_user_id_placeholder": "user_id दर्ज करें"
   }
 }
