--- a/frontend/miniapp_frontend/src/i18n/locales/ru.json
+++ b/frontend/miniapp_frontend/src/i18n/locales/ru.json
@@ -5,9 +5,9 @@
     "masterBot": "Master Bot",
     "footerBrand": "Работает на GraceHub 0.1.0a",
     "loading": "Загрузка приложения...",
-    "error_open_from_telegram": "Откройте mini app через Telegram",
+    "open_from_telegram": "Ошибка: Откройте mini app через Telegram или попробуйте позже",
     "error_owner_only": "Эта панель доступна только владельцу бота. Откройте мини‑аппу из аккаунта администратора.",
-    "error_hint_open_from_bot": "Откройте mini app непосредственно из Telegram (@bot_name → кнопка menu)",
+    "open_from_telegram_hint": "Откройте mini app непосредственно из Telegram",
     "first_launch_prompt": "Вставьте токен бота из @BotFather:",
     "first_launch_create_error_fallback": "Не удалось создать бота. Проверьте токен и права доступа.",
     "footer_text": "для вашей поддержки",
@@ -236,5 +236,9 @@
     "cancel": "Отмена",
     "add_owner_title": "Добавить owner ID",
     "owner_user_id_placeholder": "Введите user_id"
+  },
+  "instances": {
+    "select_instance_title": "Выберите инстанс",
+    "available_count": "{{count}} доступных"
   }
 }
