--- a/frontend/miniapp_frontend/src/i18n/locales/es.json
+++ b/frontend/miniapp_frontend/src/i18n/locales/es.json
@@ -3,7 +3,7 @@
     "loading_app": "Cargando",
     "title": "Plataforma GraceHub",
     "masterBot": "Bot maestro",
-    "footerBrand": "Funciona con GraceHub 0.1.0a",
+    "footerBrand": "Funciona con ",
     "loading": "Cargando la aplicación...",
     "open_from_telegram": "Abra la mini app desde Telegram",
     "error_owner_only": "Este panel solo está disponible para el propietario del bot. Ábralo desde la cuenta del administrador.",
