--- a/frontend/miniapp_frontend/src/i18n/locales/hi.json
+++ b/frontend/miniapp_frontend/src/i18n/locales/hi.json
@@ -3,7 +3,7 @@
     "loading_app": "लोड हो रहा है",
     "title": "GraceHub प्लेटफ़ॉर्म",
     "masterBot": "मास्टर बॉट",
-    "footerBrand": "GraceHub 0.1.0a पर चलता है",
+    "footerBrand": " पर चलता है",
     "loading": "एप्लिकेशन लोड हो रहा है...",
     "open_from_telegram": "कृपया मिनी ऐप Telegram के माध्यम से खोलें",
     "error_owner_only": "यह पैनल केवल बॉट के मालिक के लिए उपलब्ध है। कृपया एडमिन अकाउंट से मिनी‑ऐप खोलें।",
