--- a/frontend/miniapp_frontend/src/i18n/locales/ru.json
+++ b/frontend/miniapp_frontend/src/i18n/locales/ru.json
@@ -3,7 +3,7 @@
     "loading_app": "Загрузка",
     "title": "GraceHub Platform",
     "masterBot": "Master Bot",
-    "footerBrand": "Работает на GraceHub 0.1.0a",
+    "footerBrand": "Работает на ",
     "loading": "Загрузка приложения...",
     "open_from_telegram": "Ошибка: Откройте mini app через Telegram или попробуйте позже",
     "error_owner_only": "Эта панель доступна только владельцу бота. Откройте мини‑аппу из аккаунта администратора.",
