--- a/frontend/miniapp_frontend/src/i18n/locales/zh.json
+++ b/frontend/miniapp_frontend/src/i18n/locales/zh.json
@@ -3,7 +3,7 @@
     "loading_app": "加载中",
     "title": "GraceHub 平台",
     "masterBot": "主控机器人",
-    "footerBrand": "由 GraceHub 0.1.0a 提供支持",
+    "footerBrand": "由 提供支持",
     "loading": "正在加载应用…",
     "open_from_telegram": "请通过 Telegram 打开 mini app",
     "error_owner_only": "此面板仅限机器人所有者使用。请使用管理员账户打开。",
