--- a/frontend-miniapp/src/i18n/locales/ru.json
+++ b/frontend-miniapp/src/i18n/locales/ru.json
@@ -5,9 +5,9 @@
     "masterBot": "Master Bot",
     "footerBrand": "Работает на ",
     "loading": "Загрузка приложения...",
-    "open_from_telegram": "Ошибка: Откройте mini app через Telegram или попробуйте позже",
+    "open_from_telegram": "Ошибка: Попробуйте позже",
     "error_owner_only": "Эта панель доступна только владельцу бота. Откройте мини‑аппу из аккаунта администратора.",
-    "open_from_telegram_hint": "Откройте mini app непосредственно из Telegram",
+    "open_from_telegram_hint": "Произошла внутрення ошибка приложения. Рекомендуем связаться с администратором",
     "first_launch_prompt": "Вставьте токен бота из @BotFather:",
     "first_launch_create_error_fallback": "Не удалось создать бота. Проверьте токен и права доступа.",
     "footer_text": "для вашей поддержки",
