--- a/frontend-miniapp/src/i18n/locales/en.json
+++ b/frontend-miniapp/src/i18n/locales/en.json
@@ -161,8 +161,8 @@
     "loading": "Loading...",
     "add_title": "👥 Add operator",
     "enter_telegram_id": "Enter Telegram ID",
-    "add_success": "✅ Operator added",
-    "remove_success": "✅ Operator removed",
+    "add_success": "Operator added",
+    "remove_success": "Operator removed",
     "error_prefix": "❌ Error:",
     "telegram_id_label": "Telegram ID",
     "telegram_id_hint": "To find ID: open @username_to_id_bot in Telegram",
