--- a/frontend-miniapp/src/i18n/locales/es.json
+++ b/frontend-miniapp/src/i18n/locales/es.json
@@ -161,8 +161,8 @@
     "loading": "Cargando...",
     "add_title": "👥 Agregar operador",
     "enter_telegram_id": "Ingrese el ID de Telegram",
-    "add_success": "✅ Operador agregado",
-    "remove_success": "✅ Operador eliminado",
+    "add_success": "Operador agregado",
+    "remove_success": "Operador eliminado",
     "error_prefix": "❌ Error:",
     "telegram_id_label": "ID de Telegram",
     "telegram_id_hint": "Para obtener el ID, abra @username_to_id_bot en Telegram",
