--- a/frontend-miniapp/src/i18n/locales/hi.json
+++ b/frontend-miniapp/src/i18n/locales/hi.json
@@ -161,8 +161,8 @@
     "loading": "लोड हो रहा है...",
     "add_title": "👥 ऑपरेटर जोड़ें",
     "enter_telegram_id": "Telegram ID दर्ज करें",
-    "add_success": "✅ ऑपरेटर जोड़ा गया",
-    "remove_success": "✅ ऑपरेटर हटाया गया",
+    "add_success": "ऑपरेटर जोड़ा गया",
+    "remove_success": "ऑपरेटर हटाया गया",
     "error_prefix": "❌ त्रुटि:",
     "telegram_id_label": "Telegram ID",
     "telegram_id_hint": "ID प्राप्त करने के लिए @username_to_id_bot खोलें",
