--- a/frontend-miniapp/src/i18n/locales/ru.json
+++ b/frontend-miniapp/src/i18n/locales/ru.json
@@ -162,8 +162,8 @@
     "loading": "Загрузка...",
     "add_title": "👥 Добавить оператора",
     "enter_telegram_id": "Введите Telegram ID",
-    "add_success": "✅ Оператор добавлен",
-    "remove_success": "✅ Оператор удалён",
+    "add_success": "Оператор добавлен",
+    "remove_success": "Оператор удалён",
     "error_prefix": "❌ Ошибка:",
     "telegram_id_label": "Telegram ID",
     "telegram_id_hint": "Найти ID: откройте @username_to_id_bot в Telegram",
