--- a/frontend-miniapp/src/i18n/locales/zh.json
+++ b/frontend-miniapp/src/i18n/locales/zh.json
@@ -161,8 +161,8 @@
     "loading": "加载中...",
     "add_title": "👥 添加客服人员",
     "enter_telegram_id": "输入 Telegram ID",
-    "add_success": "✅ 已添加客服人员",
-    "remove_success": "✅ 已移除客服人员",
+    "add_success": "已添加客服人员",
+    "remove_success": "已移除客服人员",
     "error_prefix": "❌ 错误：",
     "telegram_id_label": "Telegram ID",
     "telegram_id_hint": "要查找 ID，请打开 Telegram 中的 @username_to_id_bot",
